partially incorporated Euan feedback

--- a/Model slides/models.tex
+++ b/Model slides/models.tex
@@ -31,7 +31,7 @@
 subject to:
 \begin{align}
 s_{ait} \leq& s_{ai(t+1)}											&	\forall a \in A, \forall i \in I, \forall t \in T				\\
-s_{ai\sigma_{it_N}} \geq& 1										&	\forall a \in A, \forall i \in I						\\
+s_{ai\sigma_{it_N}} =& 1										&	\forall a \in A, \forall i \in I						\\
 s_{ajt} \leq& s_{ai\sigma_{it}}										&	\forall a \in A, \forall (i, j) \in IP, \forall t \in T 			\\
 N_{rp} \geq& \sum_{a \in A}\sum_{i\in I} (\rho_{ir} \cdot (s_{ait} - s_{ai\sigma_{it}}))		& 	\forall r \in R, \forall p \in P, \forall t \in T_p			\\
 O_p =&  \sum_{a \in A} s_{ai_N\sigma_{i_Nt_p}}							& 	\forall p \in P 							\\
