--- a/2nd year report/Year2report.tex
+++ b/2nd year report/Year2report.tex
@@ -240,82 +240,123 @@ I started with very simple models that had a small scope and many assumptions, a
 
 All models I created are Mixed-Integer Linear Programming (MILP) models, meaning the variables can both be continuous or integer variables, and every variable has a linear relation with the objective and the constraints (i.e. no variables are multiplied by other variables). This is the type of models most commonly used in the scheduling literature I have come across, indicating they are generally well-suited for these this type of problem. 
 
-\subsection{Initial models}
+It is also worth noting that each of the models shown in this section represents a stage in my development as a researcher and as someone designing model. For that reason the models shown, especially the early ones, can likely be refined further. Since this report is about my work and progress I opted to not to go back to my older models and refine them extensively with the experience I gained since making them originally. 
+
+\subsection{Deterministic models}
 The first models I worked on were three simple models, one for each of the three phases. My idea behind this was to create a basis for each of the phases, which I could then combine into models where multiple phases are considered. To give the reader an idea of how these models work I will show some of the models I created.
 
-I first started work on an installation model. I tried a handful of models that did not work or had major flaws, until I came to the following model that works under some heavy assumptions:
+\subsubsection{Installation model}
+I first started work on an installation model. This was an iterative development process where the first handful of models had logical contractions or were infeasible for different reasons, and the first feasible models turned out to be missing some crucial restrictions and gave models that would be impossible in practice. The first model that gave potentially possible results, albeit under heavy assumptions, is shown here:
 
+\small
 \begin{equation}
-	\max_{\substack{O_p, N_{rp} \in \mathbb{Z}^* \\
-	s_{ait} \in \{0, 1\}}} 
-	\sum_{p \in P} [ O_p \cdot v_p - \sum_{r \in R} N_{rp} \cdot C_{rp} ]
+	\max_{\substack{O_p, N_{r,p} \in \mathbb{Z}^* \\
+	s_{a,i,t} \in \{0, 1\}}} 
+	\sum_{p \in P} [ O_p \cdot v_p - \sum_{r \in R} N_{r,p} \cdot C_{r,p} ]
 \end{equation}
 subject to:
-\begin{align}
-s_{ait} \leq& s_{ai(t+1)}											&	\forall a \in A, \forall i \in I, \forall t \in T				\\
-s_{ai\sigma_{it_N}} \geq& 1										&	\forall a \in A, \forall i \in I						\\
-s_{ajt} \leq& s_{ai\sigma_{it}}										&	\forall a \in A, \forall (i, j) \in IP, \forall t \in T 			\\
-N_{rp} \geq& \sum_{a \in A}\sum_{i\in I} (\rho_{ir} \cdot (s_{ait} - s_{ai\sigma_{it}}))		& 	\forall r \in R, \forall p \in P, \forall t \in T_p			\\
-O_p =&  \sum_{a \in A} s_{ai_N\sigma_{i_Nt_p}}							& 	\forall p \in P 							\\
-N_{rp} \leq& m_{rp}											& 	\forall r \in R, \forall p \in P
+\begin{align}		
+s_{a,i,t} \leq& s_{a,i,(t+1)}											&	\forall a \in A, \forall i \in I, \forall t \in T				\\
+s_{a,i,(\sigma_{i,t_N})} =& 1											&	\forall a \in A, \forall i \in I						\\
+s_{a,j,t} \leq& s_{a,i,(\sigma_{i,t})}										&	\forall a \in A, \forall (i, j) \in IP, \forall t \in T 			\\
+N_{r,p} \geq& \sum_{a \in A}\sum_{i\in I} (\rho_{i,r} \cdot (s_{a,i,t} - s_{a,i,(\sigma_{i,t})}))	& 	\forall r \in R, \forall p \in P, \forall t \in T_p			\\
+O_p =&  \sum_{a \in A} s_{a,i_N,(\sigma_{i_N,t_p})}							& 	\forall p \in P 							\\
+N_{r,p} \leq& m_{r,p}												& 	\forall r \in R, \forall p \in P
 \end{align}
+\normalsize
 
-In the problem for which this model is made there is a set of assets $A$ that each have a set of $I$ tasks that need to be completed within the timeframe. There are two timescales used; periods $p$ which is the timescale at which turbines can be brought online and vessels can be chartered (a month within my artificial test cases) and timesteps $t$ at which tasks are performed (an hour in my test cases). 
+In the problem for which this model is made there is a set of assets $A$ that each have a set of $I$ tasks that need to be completed within the timeframe. There are two timescales used; periods $p$ which is the timescale at which turbines can be brought online and vessels can be chartered (a month within my artificial test cases) and timesteps $t$ at which tasks are performed (an hour in my test cases). These two different timescales help incorporate the variety of events captured by this model; weather conditions and tasks being completed happens on the scale of hours, but a vessel chartered is chartered for a minimum duration (for example, one month). 
 
 There are three types of decision variables in this model: 
 
 \begin{itemize}
 \item $O_p$: integer variable representing how many turbines are online in a given period $p$
-\item $N_{rp}$: integer variable representing how many resources of type $r$ are used in period $p$
-\item $s_{ait}$: binary variable which takes a value of 1 if task $i$ on asset $a$ has start at (or before) time $t$
+\item $N_{r,p}$: integer variable representing how many resources of type $r$ are used in period $p$
+\item $s_{a,i,t}$: binary variable which takes a value of 1 if task $i$ on asset $a$ has start at (or before) time $t$
 \end{itemize}
 
-The primary decisions that need to be made are the start times of the tasks (the first time steps for each asset $a$ and task $i$ for which $s_{ait}$ takes the value 1); from this the times the turbines come online and the resources required follow. 
+The primary decisions that need to be made are the start times of the tasks (the first time steps for each asset $a$ and task $i$ for which $s_{a,i,t}$ takes the value 1); from this the times the turbines come online and the resources required follow directly. 
 
-Equation (1) is the objective; the goal is maximizing the total value of the project. Therefore, per period, we add up the energy value generated ($O_p \cdot v_p$ where $v_p$ is the value of energy that a single turbine generates in that timeframe) and subtract the costs of vessels used ($N_{rp} \cdot C_{rp}$ where $C_{rp}$ is the cost of that type of vessel). 
+Equation (1) is the objective; the goal is maximizing the total value of the project. Therefore, per period, we add up the energy value generated ($O_p \cdot v_p$ where $v_p$ is the value of energy that a single turbine generates in that timeframe) and subtract the costs of vessels used ($N_{r,p} \cdot C_{r,p}$ where $C_{r,p}$ is the cost of that type of vessel). It is assumed the values $C_{r,p}$ and $v_p$ are deterministic and given as inputs. If a day-rate for vessels or MWh and energy market rates are given, the values per period can be calculated from that. 
 
-Equation (2) enforces that if a task is started it remains started for every later timestep. Equation 3 uses the time indicator $\sigma_{it}$ which treated as a parameter; it indicates the timestep at which task $i$ should have been started, for it to have finished at time $t$; it is calculated using the duration of task $i$, taking into account all timesteps in which the weather restricts task $i$ from being worked on. Since this is a highly simplified model, the weather is assumed to be perfectly predicted, hence $\sigma_{it}$ is a deterministic value. In equation (3) it uses the value $t_N$ which is the final timestep, hence this equation enforces that every task is started early enough for it to be finished by the final timestep. 
+Equation (2) enforces that if a task is started it remains started for every later timestep. Equation 3 uses the time indicator $\sigma_{i,t}$ which treated as a parameter; it indicates the timestep at which task $i$ should have been started, for it to have finished at time $t$. It is defined as 
+$$\sigma_{i,t} = \max\{\tilde{t} | \sum_{x = \tilde{t}}^t \omega_{i,x} \geq d_i, \tilde{t} \in T\}$$ 
+where $\omega_{i,t}$ is a binary parameter which is 1 if the weather allows task $i$ to be performed at time $t$, and $d_i$ is the duration of task $i$. In this it is assumed that every task can be started and then halted if the weather turns bad, and continued the moment the weather allows this again (during this entire timeframe the vessels are unavailable to perform other tasks). Since this is a highly simplified model, the weather and duration are assumed to be perfectly predicted, hence $\sigma_{i,t}$ is a deterministic value. In equation (3) it uses the value $t_N$ which is the final timestep, hence this equation enforces that every task is started early enough for it to be finished by the final timestep. 
 
-Equation (4) enforces a specific task order; $IP$ is the set of pairs of tasks $(i, j)$ which require task $i$ to be finished before task $j$ is started. In equation (5) the number of vessels needed in a specific period is calculated; $\rho_{ir}$ is the amount of resources of type $r$ task $i$ needs. It uses $T_p$ which is simply the set of timesteps within period $p$. Equation (6) counts how many assets have finished installation (completed task $i_N$) in time to be active in period $p$ (before time step $t_p$). Finally equation (7) puts a maximum on the number of vessels of a specific type used in a given period. 
-
-\bigskip
-
-The above model can be used to optimize the installation project, under some severe assumptions. It is assumed that the precise weather is known for the entire project (which can often span years), assumes no delay in tasks other than that based on weather, and assumes every turbine is active at full strength without any failures from the moment it is completed. This said, creating this model was valuable practice for me, as even getting to this model took some tries and each failed attempt taught me more aspects to pay attention to. 
-
-The initial decommission model is nearly identical to the above model, other than turbines going offline when work is started instead going online when work is completed. The maintenance model I made is very similar in structure as well; it assumes that an asset will fail if it is not maintained for some predetermined time. This is clearly a significant simplification from stochastic failures which is the more common and realistic approach, but for my initial models I assumed determinism. Under these assumptions the maintenance models had a set amount of minimum maintenance tasks that should be performed, and a set of optional tasks that can be performed to increase uptime. These models will not be shown here, but they can be found in the appendix. %TODO: Make appendix
+Equation (4) enforces a specific task order; $IP$ is the set of pairs of tasks $(i, j)$ which require task $i$ to be finished before task $j$ is started. In equation (5) the number of vessels needed in a specific period is calculated; $\rho_{i,r}$ is the amount of resources of type $r$ task $i$ needs. This value is counted once for every task started, but every task that finished is subtracted again. This equation uses $T_p$ which is simply the set of timesteps within period $p$. In Equation (6) $i_N$ is the final installation task, and $t_p$ is the deadline (in timesteps) for a turbine to be finished if it is to be active in period $p$ (this can be the first timestep of $p$, but could also be chosen to be earlier if the operator wishes to do so). Equation (6) counts how many assets have finished installation (i.e. completed task $i_N$) in time to be active in period $p$ (before time step $t_p$); the term $\sigma_{i_N,t_p}$ is the timestep at which the final installation task should have been started for it to be completed by the deadline $t_p$. Finally equation (7) puts a maximum on the number of vessels of a specific type used in a given period, where $m_rp$ is an input parameter. Without this the model might decide to charter 100 heavy lift vessels in the first period and work on all turbines simultaneously, which is unrealistic in practice. 
 
 \bigskip
 
-After creating these models I combined them into one model spanning the entire life-cycle, planning every single task (under the same deterministic assumptions).
+The above model can be used to optimize the installation project, under some severe assumptions. It is assumed that the precise weather is known for the entire project (which can often span years), assumes no delay in tasks other than that based on weather, and assumes every turbine is active at full strength without any failures from the moment it is completed. This said, creating this model was valuable practice for me, as the steps it took me to get to this model taught me more aspects to pay attention to. 
+
+\subsubsection{Maintenance model}
+The maintenance model is very similar in structure; it assumes that an asset will fail if it is not maintained for some predetermined time. Under these assumptions the maintenance models had a set amount of minimum maintenance tasks that should be performed, and a set of optional tasks that can be performed to increase uptime:
 
 \begin{equation}
-	\max_{\substack{N_{rp} \in \mathbb{Z}^* \\ 
-	s_{ait}, o_{at} \in \{0, 1\}}} 
-	\sum_{p \in P} [ DIS^p (\sum_{t\in T_p} \sum_{a \in A} (o_{at} \cdot v_t)  - \sum_{r\in R} (N_{rp} \cdot C_{rp})) ]
+	\max_{\substack{O_t, N_{r,p} \in \mathbb{Z}^* \\ 
+	s_{a,i,t}, b_{a,t} \in \{0, 1\}}} 
+	\sum_{p \in P} [ DIS^p (\sum_{t\in T_p} (O_t \cdot v_t)  - \sum_{r\in R} (N_{r,p} \cdot C_{r,p})) ]
 \end{equation}
 subject to:
 \begin{align}
-s_{ait} \leq& s_{ai(t+1)}															& \forall a \in A, \forall i \in \mathcal{I}, \forall t \in T		\\
-s_{ai\sigma_{it_N}} \geq& 1														& \forall a \in A, \forall i \in \mathcal{I} - M^O			\\
-s_{ai^D_0t} - 1 \leq& s_{ai\sigma_{it}} - s_{ait}											& \forall a \in A, \forall i \in \mathcal{I} - D, \forall t \in T	\\
-s_{ajt} \leq& s_{ai\sigma_{it}}														& \forall a \in A, \forall (i, j) \in IP, \forall t \in T 		\\
-m_{rp} \geq N_{rp} \geq& \sum_{a\in A} \sum_{i\in \mathcal{I}} (\rho_{ir} \cdot (s_{ait} - s_{ai\sigma_{it}})) 		& \forall r \in R, \forall p \in P, \forall t \in T_p 			\\
-o_{at} \leq& s_{ai^I_N\sigma_{i^I_Nt}} - s_{ai^D_0t}										& \forall a \in A, \forall t \in T					\\
-o_{at} \leq& \sum_{i \in M \cup \{i^I_N\}} (s_{ai\sigma_{it}} - s_{ai\sigma_{i(t-\lambda_a)}})				& \forall a \in A, \forall t \in T					\\
-o_{at} \leq& 1 + s_{ai\sigma_{it}} - s_{ait}												& \forall a \in A, \forall i \in M, \forall t \in T		
+s_{a,i,t} \leq& s_{a,i,(t+1)}												&	\forall a \in A, \forall i \in M, \forall t \in T	\\
+s_{a,i,(\sigma_{i,t_N})} \geq& 1												&	\forall a \in A, \forall i \in M^M			\\		
+N_{r,p} \geq& \sum_{a\in A} \sum_{i\in M} (\rho_{i,r} \cdot (s_{a,i,t} - s_{a,i,(\sigma{i,t})})) 		& 	\forall r \in R, \forall p \in P, \forall t \in T_p 	\\
+b_{a,t} >&  \sum_{i \in M} [s_{a,i,(\sigma_{i,(t - \lambda_a)})} - s_{a,i,(\sigma_{i,t})}]			&	\forall a \in A, \forall t \in T 			\\
+O_t =&  |A| - \sum_{a \in A} b_{a,t}											&	\forall t \in T 						\\
+N_{r,p} \leq& m_{r,p}													&	\forall r \in R, \forall p \in P
 \end{align}
 
-I will not go over every detail of this model, but the full notes can be found in the appendix. %TODO: Appendix
-The primary structure of having $s_{ait}$ be the main variables and having variables for the required resources and online turbines remains the same as before. The largest difference is the replacement of variables $O_p$ with $o_{at}$, which is a binary variable per asset and timestep indicating whether that asset is online at the given time. In order for it to be online that asset needs to be fully installed and not started decommission (equation (14)), have had recent maintenance (equation (15)) and no maintenance on at asset can be happening at this time (equation (16)). 
+The objective function is similar to that of the installation model, with two changes. It adds a discount factor $DIS$ which can be used to discount income and costs later in the project, if the operator would wish to do so. Additionally the terms regarding online turbines and the energy value now depend on the timestep rather than period, as during maintenance they can be brought online or offline more often and on smaller timescales. 
 
-This model still has very strong assumptions and for that reason would not be valuable in practice. But even if those assumptions were to be relaxed, a model such as this would not have much value in practice. Optimizing every single scheduling decision over the entire 20+ year life-cycle of an OWF at the start of the project is both infeasible and unnecessary. Infeasible because the size of this problem is too big for any optimizing solver to solve; if a timestep is an hour there are over 175.000 timesteps in a 20 year period, and with very conservative values of 40 tasks per asset and 80 assets that would lead to over half a billion $s_{ait}$ variables. That is not to say another approach could not create a feasible model for the entire life-cycle, although it is an extrodinarily large problem that would normally be split into smaller problems. On top of being infeasible, there is no strong reason to plan all of this in advance in a single model; cost estimation is generally better done using simulation, and any solution found by this model is unlikely to be much better than solutions found by models for individual phases, as there is not much interaction other than resource sharing included in this model. 
+Equation (9) is identical to equation (2) from the installation model, other than that the set of tasks is now called $M$ rather than $I$. This set $M$ is made up of two distinct subsets: $M^M$ and $M^O$, which respectively contain the mandatory and optional tasks. The idea behind this is $M^M$ contains some minimum required maintenance, for example if the maintenance project spans 20 years and the operator wants at least one routine inspection to be done every year, $M^M$ would contain 20 inspection tasks, and $M^O$ contains any other tasks. Looking back at this approach, it is clear that the model would not guarantee these mandatory tasks to be equally spread out. The way failures are modeled (which I will discuss later) helps to mitigate that, but I expect an operator would prefer to have some guarantee that these 20 inspection tasks do not all happen in the first 5 years. 
+
+Equation (10) enforces all mandatory tasks to be finished by the end of the considered timespan, and equation (11) is identical to (5) from the previous model. 
+
+A new variable is introduced in (12); $b_{a,t}$ is a binary variable which takes a value of 1 if asset $a$ is broken at time $t$. We have a parameter $\lambda_a$ which indicates the amount of time an asset can go without maintenance before failing. In the equation we add up all maintenance tasks that have finished more than $\lambda_a$ timesteps ago, and subtract all tasks that have finished now. If these amounts are equal, $b_{a,t}$ is set at 1. 
+
+Finally equation (13) determines how many assets are online by subtracting the amount of broken assets from the total number, and equation (14) is identical to (7). 
+
+\subsubsection{Decommission model}
+Lorem ipsum
+
+The initial decommission model is nearly identical to the above model, other than turbines going offline when work is started instead going online when work is completed. The maintenance model I made is very similar in structure as well; it assumes that an asset will fail if it is not maintained for some predetermined time. This is clearly a significant simplification from stochastic failures which is the more common and realistic approach, but for my initial models I assumed determinism. Under these assumptions the maintenance models had a set amount of minimum maintenance tasks that should be performed, and a set of optional tasks that can be performed to increase uptime. These models will not be shown here, but they can be found in the appendix. %TODO: Make appendix
+
+\subsubsection{Combined model}
+
+After creating these models I combined them into one model spanning the entire life-cycle, planning every single task (under the same deterministic assumptions).
+
+\small
+\begin{equation}
+	\max_{\substack{N_{r,p} \in \mathbb{Z}^* \\ 
+	s_{a,i,t}, o_{a,t} \in \{0, 1\}}} 
+	\sum_{p \in P} [ DIS^p (\sum_{t\in T_p} \sum_{a \in A} (o_{a,t} \cdot v_t)  - \sum_{r\in R} (N_{r,p} \cdot C_{r,p})) ]
+\end{equation}
+subject to:
+\begin{align}
+s_{a,i,t} \leq& s_{a,i,(t+1)}															& \forall a \in A, \forall i \in \mathcal{I}, \forall t \in T		\\
+s_{a,i,(\sigma_{i,t_N})} \geq& 1															& \forall a \in A, \forall i \in \mathcal{I} - M^O			\\
+s_{a,i^D_0,t} - 1 \leq& s_{a,i,(\sigma_{i,t})} - s_{a,i,t}											& \forall a \in A, \forall i \in \mathcal{I} - D, \forall t \in T	\\
+s_{a,j,t} \leq& s_{a,i,(\sigma_{i,t})}														& \forall a \in A, \forall (i, j) \in IP, \forall t \in T 		\\
+N_{r,p} \geq& \sum_{a\in A} \sum_{i\in \mathcal{I}} (\rho_{i,r} \cdot (s_{a,i,t} - s_{a,i,(\sigma_{i,t})})) 				& \forall r \in R, \forall p \in P, \forall t \in T_p 			\\
+N_{r,p} \leq& m_{r,p}																& \forall r \in R, \forall p \in P 					\\
+o_{a,t} \leq& s_{a,i^I_N,(\sigma_{i^I_N,t})} - s_{a,i^D_0,t}										& \forall a \in A, \forall t \in T					\\
+o_{a,t} \leq& \sum_{i \in M \cup \{i^I_N\}} (s_{a,i,(\sigma_{i,t})} - s_{a,i,(\sigma_{i,(t-\lambda_a)})})				& \forall a \in A, \forall t \in T					\\
+o_{a,t} \leq& 1 + s_{a,i,(\sigma_{i,t})} - s_{a,i,t}												& \forall a \in A, \forall i \in M, \forall t \in T			
+\end{align}
+\normalsize
+
+I will not go over every detail of this model, but the full notes can be found in the appendix. %TODO: Appendix
+The primary structure of having $s_{a,i,t}$ be the main variables and having variables for the required resources and online turbines remains the same as before. The largest difference is the replacement of variables $O_p$ with $o_{a,t}$, which is a binary variable per asset and timestep indicating whether that asset is online at the given time. In order for it to be online that asset needs to be fully installed and not started decommission (equation (14)), have had recent maintenance (equation (15)) and no maintenance on at asset can be happening at this time (equation (16)). The value of these variables follows directly from the scheduling decisions, but I introduced the auxiliary variable for clarity. 
+
+This model still has very strong assumptions and for that reason would not be valuable in practice. But even if those assumptions were to be relaxed, a model such as this would not have much value in practice. Optimizing every single scheduling decision over the entire 20+ year life-cycle of an OWF at the start of the project is both infeasible and unnecessary. Infeasible because the size of this problem is too big for any optimizing solver to solve; if a timestep is an hour there are over 175.000 timesteps in a 20 year period, and with very conservative values of 40 tasks per asset and 80 assets that would lead to over half a billion $s_{a,i,t}$ variables. That is not to say another approach could not create a feasible model for the entire life-cycle, although it is an extrodinarily large problem that would normally be split into smaller problems. On top of being challenging, there is no strong reason to plan all of this in advance in a single optimization model; cost estimation is generally better done using simulation, and any solution found by this model is unlikely to be much better than solutions found by models for individual phases, as there is not much interaction other than resource sharing included in this model. 
 
 While this model is not usable in practice, it was still a good exercise for me to work on. I would not have some of the insights above if I had not created a (simplified) model spanning the entire life-cycle, and experimenting with the size of model (in number of variables and constraints) gave me a better idea of how quickly models such as this can grow in size. 
 
-\subsection{More sophisticated models}
+\subsection{Stochastic models}
 After working my way up to the previously discussed life-cycle spanning model, I aimed to relax the assumptions in it, first and foremost the assumption that every aspect is deterministic. This proved difficult for various reasons. The model I started with is complicated, and I do not have much experience with Stochastic Programming models, which made starting with a complicated model such as this challenging. It also spans a large timescale, but still has a high fidelity (if a timestep is still assumed to be an hour). 
 
-In the models shown before the parameter $\sigma_{it}$ was used to incorporate weather circumstances, and this parameter was used as a variable index. This approach is not well suited for Stochastic Programming, as this $\sigma_{it}$ would be subject to uncertainty, which means the variables involved are also subject to uncertainty. I tried to handle this issue by introducing scenarios, a technique used in the literature \cite{besnard2011stochastic,de2012computational}. Each scenario represents a realization of all uncertain factors, and the model would be optimized over a set of (selected) scenarios. In this example a new index would be introduced to $\sigma_{it}$, say $\sigma_{its}$, where $s$ is the scenario index. However this approach is more suited to shorter timescales than the ones I was using; only a handful of scenarios are needed to capture the possible weather conditions over the course of a week or a month, but over the course of 20 years many scenarios are needed to make the set representative of the possible options. Therefore I opted to scale down and introduce stochastic elements in a smaller model first.
+In the models shown before the parameter $\sigma_{i,t}$ was used to incorporate weather circumstances, and this parameter was used as a variable index. This approach is not well suited for Stochastic Programming, as this $\sigma_{i,t}$ would be subject to uncertainty, which means the variables involved are also subject to uncertainty. I tried to handle this issue by introducing scenarios, a technique used in the literature \cite{besnard2011stochastic,de2012computational}. Each scenario represents a realization of all uncertain factors, and the model would be optimized over a set of (selected) scenarios. In this example a new index would be introduced to $\sigma_{i,t}$, say $\sigma_{i,t,s}$, where $s$ is the scenario index. However this approach is more suited to shorter timescales than the ones I was using; only a handful of scenarios are needed to capture the possible weather conditions over the course of a week or a month, but over the course of 20 years many scenarios are needed to make the set representative of the possible options. Therefore I opted to scale down and introduce stochastic elements in a smaller model first.
 
 For this I chose to focus on the maintenance phase, introducing stochastic failures, weather circumstances and energy values. 
 
