--- a/Model slides/models.tex
+++ b/Model slides/models.tex
@@ -104,7 +104,7 @@ Parameters:
 subject to:
 \begin{align}
 s_{ait} \leq& s_{ai(t+1)}													&	\forall a \in A, \forall i \in M, \forall t \in T	\\
-s_{ai\sigma_{it_N}} \geq& 1												&	\forall a \in A, \forall i \in M^M			\\		
+s_{ai\sigma_{it_N}} =& 1												&	\forall a \in A, \forall i \in M^M			\\		
 N_{rp} \geq& \sum_{a\in A} \sum_{i\in M} (\rho_{ir} \cdot (s_{ait} - s_{ai\sigma{it}})) 			& 	\forall r \in R, \forall p \in P, \forall t \in T_p 	\\
 b_{at} >&  \sum_{i \in M} [s_{ai\sigma_{i(t - \lambda_a)}} - s_{ai\sigma_{it}}]					&	\forall a \in A, \forall t \in T 			\\
 O_t =&  |A| - \sum_{a \in A} b_{at}											&	\forall t \in T 						\\
@@ -178,7 +178,7 @@ Parameters:
 subject to:
 \begin{align}
 s_{ait} \leq& s_{ai(t+1)}																	& \forall a \in A, \forall i \in \mathcal{I}, \forall t \in T	\\
-s_{ai\sigma_{it_N}} \geq& 1																& \forall a \in A, \forall i \in I\cup M^M			\\
+s_{ai\sigma_{it_N}} =& 1																& \forall a \in A, \forall i \in I\cup M^M			\\
 s_{ajt} \leq& s_{ai\sigma_{it}}																& \forall a \in A, \forall (i, j) \in IP, \forall t \in T 	\\
 N_{rp} \geq& \sum_{a\in A} \sum_{i\in \mathcal{I}} (\rho_{ir} \cdot (s_{ait} - s_{ai\sigma_{it}})) 						& \forall r \in R, \forall p \in P, \forall t \in T_p 		\\
 o_{at} \leq& s_{ai_N\sigma_{i_Nt}}															& \forall a \in A, \forall t \in T			\\
@@ -255,7 +255,7 @@ Parameters:
 subject to:
 \begin{align}
 s_{ait} \leq& s_{ai(t+1)}											&	\forall a \in A, \forall i \in D, \forall t \in T			\\
-s_{ai\sigma_{it_N}} \geq& 1										&	\forall a \in A, \forall i \in D						\\
+s_{ai\sigma_{it_N}} =& 1										&	\forall a \in A, \forall i \in D						\\
 s_{ajt} \leq& s_{ai\sigma_{it}}										&	\forall a \in A, \forall (i, j) \in IP, \forall t \in T 			\\
 N_{rp} \geq& \sum_{a \in A}\sum_{i\in I} (\rho_{ir} \cdot (s_{ait} - s_{ai\sigma_{it}}))		& 	\forall r \in R, \forall p \in P, \forall t \in T_p			\\
 N_{rp} \leq& m_{rp}											& 	\forall r \in R, \forall p \in P
@@ -326,7 +326,7 @@ Parameters:
 subject to:
 \begin{align}
 s_{ait} \leq& s_{ai(t+1)}															& \forall a \in A, \forall i \in \mathcal{I}, \forall t \in T		\\
-s_{ai\sigma_{it_N}} \geq& 1														& \forall a \in A, \forall i \in \mathcal{I} - M^O			\\
+s_{ai\sigma_{it_N}} =& 1														& \forall a \in A, \forall i \in \mathcal{I} - M^O			\\
 s_{ai^D_0t} - 1 \leq& s_{ai\sigma_{it}} - s_{ait}											& \forall a \in A, \forall i \in \mathcal{I} - D, \forall t \in T	\\
 s_{ajt} \leq& s_{ai\sigma_{it}}														& \forall a \in A, \forall (i, j) \in IP, \forall t \in T 		\\
 m_{rp} \geq N_{rp} \geq& \sum_{a\in A} \sum_{i\in \mathcal{I}} (\rho_{ir} \cdot (s_{ait} - s_{ai\sigma_{it}})) 		& \forall r \in R, \forall p \in P, \forall t \in T_p 			\\
@@ -408,7 +408,7 @@ Parameters:
 subject to:
 \begin{align}
 s_{ait} \leq& s_{ai(t+1)}															& \forall a \in A, \forall i \in \mathcal{I}, \forall t \in T		\\
-s_{ai\sigma_{it_N}} \geq& 1														& \forall a \in A, \forall i \in \mathcal{I} - M^C			\\
+s_{ai\sigma_{it_N}} =& 1														& \forall a \in A, \forall i \in \mathcal{I} - M^C			\\
 s_{ai^D_0t} - 1 \leq& s_{ai\sigma_{it}} - s_{ait}											& \forall a \in A, \forall i \in \mathcal{I} - D, \forall t \in T	\\
 s_{ajt} \leq& s_{ai\sigma_{it}}														& \forall a \in A, \forall (i, j) \in IP, \forall t \in T 		\\
 m_{rp} \geq& N_{rp} \geq \sum_{a\in A} \sum_{i\in \mathcal{I}} (\rho_{ir} \cdot (s_{ait} - s_{ai\sigma_{it}})) 		& \forall r \in R, \forall p \in P, \forall t \in T_p 			\\
@@ -496,7 +496,7 @@ Stochastic parameters:
 subject to:
 \begin{align}
 s_{ait} \leq& s_{ai(t+1)}															& \forall a \in A, \forall i \in M, \forall t \in T			\\
-s_{ai\omega_{it_N}} \geq& 1														& \forall a \in A, \forall i \in M^P					\\
+s_{ai\omega_{it_N}} =& 1														& \forall a \in A, \forall i \in M^P					\\
 m_{rp} \geq& N_{rp} \geq \sum_{a\in A} \sum_{i\in \mathcal{I}} (\rho_{ir} \cdot (s_{ait} - s_{ai\omega_{it}})) 		& \forall r \in R, \forall p \in P, \forall t \in T_p 			\\
 o_{at\sigma} \leq& \sum_{i \in M} (s_{ai\omega_{it}} - s_{ai\omega_{i(t-\lambda_{ai\sigma})}})				& \forall a \in A, \forall t \in T, \forall \sigma \in S		\\
 s_{ait} - s_{ai(t-1)} \leq& 1 - \sum_{j \in M} \frac{(s_{aj\omega_{jt}} - s_{aj\omega_{j(t-\lambda_{aj\sigma})}})}{L}	& \forall a \in A, \forall i \in M^C, \forall t \in T, \forall \sigma \in S	\\
